# galaxy-in-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CSV_Parser.cpp  CSV_Parser.h  MilkshapeModel.cpp  Model.cpp  Plotting.h  README.md  Region.h  RegionMatrix.h  Simulator.cpp  Simulator.h  Star.cpp  Star.h  Utils.h  Vector3.h  config.cpp  config.h  data_exporter.cpp  data_exporter.h  data_parser.cpp  data_parser.h  globals.h  imgui.ini  includes.h  logging.h  main.cpp  peli.h  setup  star_generator.h
.github/workflows/: cmake-linux.yml  cmake-macos.yml  cmake-windows.yml  cmake.yml  devskim.yml
GTests/: DataExporter_Test.cc  Math_Test.cc  Simulation_Test.cc  Star_Test.cc  Vector3_Test.cc
OLD/: Model.cpp  Model.h
assets/: 20220416_142440_20220416_142440_JPG_BC7_1_analysis.xml
common/: controls.cpp  object_loader.cpp  object_loader.h  texture.cpp
imgui/: imgui_impl_glfw.cpp
imgui/examples/example_android_opengl3/: CMakeLists.txt
includes/: ConfigHandler.cpp  ConfigHandler.h  ConfigStruct.h  Random.h  Region.h  RegionMatrix.h  Vector3.h  json.h  logging.h
source/: RegionMatrix.cpp  star_generator.cpp
tutorial06_keyboard_and_mouse/: tutorial06.cpp
